config and vertical movement (cool and good)

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ repositories {
         }
     }
 
-    flatDir {
-        dirs "libs"
+    maven {
+        name = "Fuzs Mod Resources"
+        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
     }
 }
 
@@ -42,6 +43,9 @@ dependencies {
 
     // Dependency Mods
     modImplementation "maven.modrinth:modmenu:${project.modmenu_version}"
+    implementation "com.electronwill.night-config:core:${project.night_config_version}"
+    implementation "com.electronwill.night-config:toml:${project.night_config_version}"
+    modImplementation "net.minecraftforge:forgeconfigapiport-fabric:${project.forge_config_api_version}"
 
     // Utility
     modRuntimeOnly "curse.maven:worldedit-225608:3922622"
