--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ fabric_version=0.76.1+1.19.2
 parchment_version=2022.11.27
 
 modmenu_version=4.1.2
+night_config_version=3.6.5
+forge_config_api_version=4.2.11
