redo rendering logic to allow use a different entity base class

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ parchment_version=2022.11.27
 modmenu_version=4.1.2
 night_config_version=3.6.5
 forge_config_api_version=4.2.11
+geckolib_version=3.1.40
