--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ repositories {
         name = "Fuzs Mod Resources"
         url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
     }
+
+    maven {
+        name = 'GeckoLib'
+        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+    }
 }
 
 dependencies {
@@ -46,6 +51,7 @@ dependencies {
     implementation "com.electronwill.night-config:core:${project.night_config_version}"
     implementation "com.electronwill.night-config:toml:${project.night_config_version}"
     modImplementation "net.minecraftforge:forgeconfigapiport-fabric:${project.forge_config_api_version}"
+    modImplementation "software.bernie.geckolib:geckolib-fabric-1.19:${project.geckolib_version}"
 
     // Utility
     modRuntimeOnly "curse.maven:worldedit-225608:3922622"
