loaves will now be read instead of always scanned

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ archives_base_name=s2lib
 # Dependencies
 fabric_version=0.87.2+1.19.4
 parchment_version=2023.06.26
+mixinextras_version=0.4.1
 
 modmenu_version=6.3.1
 night_config_version=3.6.5
