--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,18 @@ plugins {
 
 loom {
     accessWidenerPath = file("src/main/resources/s2lib.accesswidener")
+
+    runs {
+        datagen {
+            inherit server
+            name "Data Generation"
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+            vmArg "-Dfabric-api.datagen.modid=tutorialmod"
+
+            runDir "build/datagen"
+        }
+    }
 }
 
 version = project.mod_version
