--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,18 @@
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.9-SNAPSHOT'
     id 'maven-publish'
-}
-
-loom {
-    accessWidenerPath = file("src/main/resources/s2lib.accesswidener")
-
-    runs {
-        datagen {
-            inherit server
-            name "Data Generation"
-            vmArg "-Dfabric-api.datagen"
-            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
-            vmArg "-Dfabric-api.datagen.modid=tutorialmod"
-
-            runDir "build/datagen"
-        }
-    }
 }
 
 version = project.mod_version
 group = project.maven_group
+
+loom {
+    accessWidenerPath = file("src/main/resources/s2lib.accesswidener")
+}
+
+fabricApi {
+    configureDataGeneration()
+}
 
 repositories {
     maven {
@@ -48,15 +40,6 @@ repositories {
         name = "Fuzs Mod Resources"
         url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
     }
-
-    maven {
-        name = 'GeckoLib'
-        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-        content {
-            includeGroupByRegex("software\\.bernie.*")
-            includeGroup("com.eliotlash.mclib")
-        }
-    }
 }
 
 dependencies {
@@ -66,18 +49,16 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
-    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixinextras_version}")))
 
     // Dependency Mods
     modImplementation "maven.modrinth:modmenu:${project.modmenu_version}"
     implementation "com.electronwill.night-config:core:${project.night_config_version}"
     implementation "com.electronwill.night-config:toml:${project.night_config_version}"
     modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_version}"
-    modImplementation "software.bernie.geckolib:geckolib-fabric-1.19.4:${project.geckolib_version}"
 
     // Utility
-    modLocalRuntime "curse.maven:worldedit-225608:4445118"
-    modLocalRuntime "maven.modrinth:forge-config-screens:v6.0.0-1.19.4-Fabric"
+    modLocalRuntime "curse.maven:worldedit-225608:4586218"
+    modLocalRuntime "maven.modrinth:forge-config-screens:v8.0.2-1.20.1-Fabric"
 
     mappings loom.layered() {
         officialMojangMappings()
